--- a/indexalumnos.html
+++ b/indexalumnos.html
@@ -22,61 +22,61 @@
    <div id="contenido">
       <h2>Índice De Contenidos</h2>
       <ul>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/molinillo.pdf" target="_blank" >&emsp;Actividad 1: Molinillo</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/lanzapeonzas.pdf" target="_blank" >&emsp;Actividad 2: Lanza Peonzas</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/balancin.pdf" target="_blank" >&emsp;Actividad 3: Balancín</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/balsa.pdf" target="_blank" >&emsp;Actividad 4: Balsa</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/lanzacoches.pdf" target="_blank" >&emsp;Actividad 5: Lanzador de Coches</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cochemedida.pdf" target="_blank" >&emsp;Actividad 6: Coche de Medida</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/hockey.pdf" target="_blank" >&emsp;Actividad 7: Jugador de Hockey Sobre Hielo</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/perro.pdf" target="_blank" >&emsp;Actividad 8: El Perro de Sam</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/molinillo.pdf" target="_blank" >&emsp;Actividad 1 - Molinillo</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/lanzapeonzas.pdf" target="_blank" >&emsp;Actividad 2 - Lanza Peonzas</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/balancin.pdf" target="_blank" >&emsp;Actividad 3 - Balancín</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/balsa.pdf" target="_blank" >&emsp;Actividad 4 - Balsa</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/lanzacoches.pdf" target="_blank" >&emsp;Actividad 5 - Lanzador de Coches</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cochemedida.pdf" target="_blank" >&emsp;Actividad 6 - Coche de Medida</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/hockey.pdf" target="_blank" >&emsp;Actividad 7 - Jugador de Hockey Sobre Hielo</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/perro.pdf" target="_blank" >&emsp;Actividad 8 - El Perro de Sam</a></li>
          <br><br>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/guitarra.pdf" target="_blank" >&emsp;Actividad 9: Guitarra</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/abaco.pdf" target="_blank" >&emsp;Actividad 10: Ábaco</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/avion.pdf" target="_blank" >&emsp;Actividad 11: Avión</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/bomberos.pdf" target="_blank" >&emsp;Actividad 12: Coche De Bomberos</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pescar.pdf" target="_blank" >&emsp;Actividad 13: Caña De Pescar</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cortacesped.pdf" target="_blank" >&emsp;Actividad 14: Cortadora De Césped</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/camiondireccion.pdf" target="_blank" >&emsp;Actividad 15: Camión Con Dirección</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/torno.pdf" target="_blank" >&emsp;Actividad 16: Torno</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/marioneta.pdf" target="_blank" >&emsp;Actividad 17: Marioneta</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tazagiratoria.pdf" target="_blank" >&emsp;Actividad 18: Taza Giratoria</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cine.pdf" target="_blank" >&emsp;Actividad 19: Cine</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cochedireccion.pdf" target="_blank" >&emsp;Actividad 20: Coche Direccion</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cintatransportadora.pdf" target="_blank" >&emsp;Actividad 21: Cinta Transportadora</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/grua.pdf" target="_blank" >&emsp;Actividad 22: Grúa</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/escavadora.pdf" target="_blank" >&emsp;Actividad 23: Escavadora</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/molino.pdf" target="_blank" >&emsp;Actividad 24: Molino</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/moto.pdf" target="_blank" >&emsp;Actividad 25: Moto</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pluma.pdf" target="_blank" >&emsp;Actividad 26: Pluma</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sillas.pdf" target="_blank" >&emsp;Actividad 27: Sillas Voladoras</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pesquero.pdf" target="_blank" >&emsp;Actividad 28: Barco Pesquero</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/emoticono.pdf" target="_blank" >&emsp;Actividad 29: Emoticonos</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tractor.pdf" target="_blank" >&emsp;Actividad 30: Tractor</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/hormigonera.pdf" target="_blank" >&emsp;Actividad 31: Hormigonera</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/plantacarnivora.pdf" target="_blank" >&emsp;Actividad 32: Planta Carnívora</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/garaje.pdf" target="_blank" >&emsp;Actividad 33: Puerta Garaje</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/presa.pdf" target="_blank" >&emsp;Actividad 34: Presa</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pulidora.pdf" target="_blank" >&emsp;Actividad 35: Pulidora</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/carabela.pdf" target="_blank" >&emsp;Actividad 36: Carabela</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/ascensor.pdf" target="_blank" >&emsp;Actividad 37: Ascensor</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/telar.pdf" target="_blank" >&emsp;Actividad 38: Telar</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/mariposa.pdf" target="_blank" >&emsp;Actividad 39: Mariposa</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/jirafa.pdf" target="_blank" >&emsp;Actividad 40: Jirafa</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/gusano.pdf" target="_blank" >&emsp;Actividad 41: Gusano</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/molinoagua.pdf" target="_blank" >&emsp;Actividad 42: Molino de Agua</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/teleferico.pdf" target="_blank" >&emsp;Actividad 43: Teleférico</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/empaquetadora.pdf" target="_blank" >&emsp;Actividad 44: Empaquetadora</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tenaza.pdf" target="_blank" >&emsp;Actividad 45: Tenaza</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tren.pdf" target="_blank" >&emsp;Actividad 46: Tren</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/troqueladora.pdf" target="_blank" >&emsp;Actividad 47: Troqueladora</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sembradora.pdf" target="_blank" >&emsp;Actividad 48: Sembradora</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/estructura.pdf" target="_blank" >&emsp;Actividad 49: Estructura</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/mellizos.pdf" target="_blank" >&emsp;Actividad 50: Mellizos</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pico.pdf" target="_blank" >&emsp;Actividad 51: Pico</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sillaruedas.pdf" target="_blank" >&emsp;Actividad 52: Silla de Ruedas</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/carretilla.pdf" target="_blank" >&emsp;Actividad 53: Carretilla</a></li>
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tierraluna.pdf" target="_blank" >&emsp;Actividad 54: Tierra y Luna</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/guitarra.pdf" target="_blank" >&emsp;Actividad 9 - Guitarra</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/abaco.pdf" target="_blank" >&emsp;Actividad 10 - Ábaco</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/avion.pdf" target="_blank" >&emsp;Actividad 11 - Avión</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/bomberos.pdf" target="_blank" >&emsp;Actividad 12 - Coche De Bomberos</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pescar.pdf" target="_blank" >&emsp;Actividad 13 - Caña De Pescar</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cortacesped.pdf" target="_blank" >&emsp;Actividad 14 - Cortadora De Césped</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/camiondireccion.pdf" target="_blank" >&emsp;Actividad 15 - Camión Con Dirección</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/torno.pdf" target="_blank" >&emsp;Actividad 16 - Torno</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/marioneta.pdf" target="_blank" >&emsp;Actividad 17 - Marioneta</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tazagiratoria.pdf" target="_blank" >&emsp;Actividad 18 - Taza Giratoria</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cine.pdf" target="_blank" >&emsp;Actividad 19 - Cine</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cochedireccion.pdf" target="_blank" >&emsp;Actividad 20 - Coche Direccion</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cintatransportadora.pdf" target="_blank" >&emsp;Actividad 21 - Cinta Transportadora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/grua.pdf" target="_blank" >&emsp;Actividad 22 - Grúa</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/escavadora.pdf" target="_blank" >&emsp;Actividad 23 - Escavadora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/molino.pdf" target="_blank" >&emsp;Actividad 24 - Molino</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/moto.pdf" target="_blank" >&emsp;Actividad 25 - Moto</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pluma.pdf" target="_blank" >&emsp;Actividad 26 - Pluma</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sillas.pdf" target="_blank" >&emsp;Actividad 27 - Sillas Voladoras</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pesquero.pdf" target="_blank" >&emsp;Actividad 28 - Barco Pesquero</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/emoticono.pdf" target="_blank" >&emsp;Actividad 29 - Emoticonos</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tractor.pdf" target="_blank" >&emsp;Actividad 30 - Tractor</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/hormigonera.pdf" target="_blank" >&emsp;Actividad 31 - Hormigonera</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/plantacarnivora.pdf" target="_blank" >&emsp;Actividad 32 - Planta Carnívora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/garaje.pdf" target="_blank" >&emsp;Actividad 33 - Puerta Garaje</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/presa.pdf" target="_blank" >&emsp;Actividad 34 - Presa</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pulidora.pdf" target="_blank" >&emsp;Actividad 35 - Pulidora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/carabela.pdf" target="_blank" >&emsp;Actividad 36 - Carabela</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/ascensor.pdf" target="_blank" >&emsp;Actividad 37 - Ascensor</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/telar.pdf" target="_blank" >&emsp;Actividad 38 - Telar</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/mariposa.pdf" target="_blank" >&emsp;Actividad 39 - Mariposa</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/jirafa.pdf" target="_blank" >&emsp;Actividad 40 - Jirafa</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/gusano.pdf" target="_blank" >&emsp;Actividad 41 - Gusano</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/molinoagua.pdf" target="_blank" >&emsp;Actividad 42 - Molino de Agua</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/teleferico.pdf" target="_blank" >&emsp;Actividad 43 - Teleférico</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/empaquetadora.pdf" target="_blank" >&emsp;Actividad 44 - Empaquetadora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tenaza.pdf" target="_blank" >&emsp;Actividad 45 - Tenaza</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tren.pdf" target="_blank" >&emsp;Actividad 46 - Tren</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/troqueladora.pdf" target="_blank" >&emsp;Actividad 47 - Troqueladora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sembradora.pdf" target="_blank" >&emsp;Actividad 48 - Sembradora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/estructura.pdf" target="_blank" >&emsp;Actividad 49 - Estructura</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/mellizos.pdf" target="_blank" >&emsp;Actividad 50 - Mellizos</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pico.pdf" target="_blank" >&emsp;Actividad 51 - Pico</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sillaruedas.pdf" target="_blank" >&emsp;Actividad 52 - Silla de Ruedas</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/carretilla.pdf" target="_blank" >&emsp;Actividad 53 - Carretilla</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tierraluna.pdf" target="_blank" >&emsp;Actividad 54 - Tierra y Luna</a></li>
       </ul>
    </div>
    <div id="pie">
