--- a/indexprofes.html
+++ b/indexprofes.html
@@ -24,14 +24,14 @@
       <ul>
          <li><a href="introduccion.html">&emsp;Introducción a Máquinas Simples Tempranas</a></li>
          <br><br>
-         <li><a href="actividad1.html">&emsp;Actividad 1: Molinillo</a></li>
-         <li><a href="actividad2.html">&emsp;Actividad 2: Lanza Peonzas</a></li>
-         <li><a href="actividad3.html">&emsp;Actividad 3: Balancín</a></li>
-         <li><a href="actividad4.html">&emsp;Actividad 4: Balsa</a></li>
-         <li><a href="actividad5.html">&emsp;Actividad 5: Lanzador de Coches</a></li>
-         <li><a href="actividad6.html">&emsp;Actividad 6: Coche de Medida</a></li>
-         <li><a href="actividad7.html">&emsp;Actividad 7: Jugador de Hockey Sobre Hielo</a></li>
-         <li><a href="actividad8.html">&emsp;Actividad 8: El Perro de Sam</a></li>
+         <li><a href="actividad1.html">&emsp;Actividad 1 - Molinillo</a></li>
+         <li><a href="actividad2.html">&emsp;Actividad 2 - Lanza Peonzas</a></li>
+         <li><a href="actividad3.html">&emsp;Actividad 3 - Balancín</a></li>
+         <li><a href="actividad4.html">&emsp;Actividad 4 - Balsa</a></li>
+         <li><a href="actividad5.html">&emsp;Actividad 5 - Lanzador de Coches</a></li>
+         <li><a href="actividad6.html">&emsp;Actividad 6 - Coche de Medida</a></li>
+         <li><a href="actividad7.html">&emsp;Actividad 7 - Jugador de Hockey Sobre Hielo</a></li>
+         <li><a href="actividad8.html">&emsp;Actividad 8 - El Perro de Sam</a></li>
          <br><br>
          <li><a href="indexotrosmontajes.html">&emsp;Otros Montajes</a></li>
       </ul>
